.provarCaches/00D5f000005vwGkEAI/objects/rstk__ictrdvsup__c.object
<CustomObject>
    <description>ictrdvsup__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_actclosedate__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_actduedate__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Actual Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_actfirmdate__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Actual Firm Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_actshipdate__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Actual Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_closvarfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>ictrdvsup_closvarfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_closvarlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Closing Var, Lab</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_closvarmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Closing Var, Mtl</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_closvarohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Closing Var, Fringe Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_closvarohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Closing Var, Lab Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_closvarohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Closing Var, Mach Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_closvarohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Closing Var, Mtl Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_closvarothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>ictrdvsup_closvarothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_closvarsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Closing Var, Sub Lab</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_closvarsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Closing Var, Sub Mtl</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_dimvals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>dimvals</label>
        <referenceTo>rstk__dimvals__c</referenceTo>
        <relationshipLabel>ictrdvsups</relationshipLabel>
        <relationshipName>ictrdvsups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ictrdvsups (Division)</relationshipLabel>
        <relationshipName>ictrdvsups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_dmddiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Demand Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ictrdvsups (Demand Division)</relationshipLabel>
        <relationshipName>ictrdvsups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_dmdproj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Demand Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>ictrdvsups (Demand Project)</relationshipLabel>
        <relationshipName>ictrdvsups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_dmdsite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Demand Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ictrdvsups (Demand Site)</relationshipLabel>
        <relationshipName>ictrdvsups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_dmdtotcstfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>ictrdvsup_dmdtotcstfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_dmdtotcstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Comp Cost, Lab</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_dmdtotcstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Comp Cost, Mtl</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_dmdtotcstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Comp Cost, Fringe Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_dmdtotcstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Comp Cost, Lab Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_dmdtotcstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Comp Cost, Mach Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_dmdtotcstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Comp Cost, Mtl Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_dmdtotcstothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>ictrdvsup_dmdtotcstothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_dmdtotcstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Comp Cost, Sub Lab</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_dmdtotcstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Comp Cost, Sub Mtl</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_intrdivtxfracct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Inter-Div Transfer Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>ictrdvsups (Inter-Div Transfer Account)</relationshipLabel>
        <relationshipName>ictrdvsups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_invuom__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Inventory Unit of Measure</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>ictrdvsups</relationshipLabel>
        <relationshipName>ictrdvsups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Item No</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>ictrdvsups</relationshipLabel>
        <relationshipName>ictrdvsups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_lne__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Line No</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_lotno__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Lot No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_ordno__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Order No</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_ordsts__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Order Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_proj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>ictrdvsups (Project)</relationshipLabel>
        <relationshipName>ictrdvsups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_qtyacc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Quantity Accepted</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_qtyintransit__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Quantity In Transit</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_qtyoutstdg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Quantity Outstanding</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_qtyreq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Quantity Req</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_qtyship__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Quantity Shipped</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_resp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Responsible Person</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>ictrdvsups</relationshipLabel>
        <relationshipName>ictrdvsups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_scheddckdte__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Scheduled Dock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_schedduedte__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Scheduled Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_schedshipdte__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Scheduled Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ictrdvsups (Site)</relationshipLabel>
        <relationshipName>ictrdvsups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_stdsvaracct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Standards Variance Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>ictrdvsups (Standards Variance Account)</relationshipLabel>
        <relationshipName>ictrdvsups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_stsdte__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_supdolchgoutfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>ictrdvsup_supdolchgoutfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_supdolchgoutlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Order Deductions, Lab</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_supdolchgoutmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Order Deductions, Mtl</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_supdolchgoutohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Order Deductions, Fringe Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_supdolchgoutohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Order Deductions, Lab Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_supdolchgoutohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Order Deductions, Mach Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_supdolchgoutohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Order Deductions, Mtl Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_supdolchgoutothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>ictrdvsup_supdolchgoutothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_supdolchgoutsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Order Deductions, Sub Lab</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_supdolchgoutsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Order Deductions, Sub Mtl</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_suptotcstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Order Cost, Mtl Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_trnsfrprice__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Transfer Price</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvsup_wbs__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>WBS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ictrdvsup</label>
    <nameField>
        <label>ictrdvsup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ictrdvsups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>